--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.3.3",
+    "zod": "^3.23.5"
   }
 }
